--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                     <li></li>
                     <!-- sign section -->
                     <li class="primary-link" onmouseover="showSign()">
-                        <a href="index.html" class="ps-nav-signIn">
+                        <a href="signIn.html" class="ps-nav-signIn">
                             Sign in
                             <span><i class='fas fa-angle-down' style='color:white;'></i></span>
                             <div class="signIn-dropdown" id="signIn">
