--- a/signIn.html
+++ b/signIn.html
@@ -31,7 +31,7 @@
                             <label class="psds-text-input___label" for="Username">Password</label><br>
                             <input type="password" id="passsword" name="password" class="psds-text-input__field">
                         </div>
-                        <button type="submit" class="psds-button psds-button--appearance-primary " id="login">Sign in</button>
+                        <button type="submit" style="cursor: pointer;" class="psds-button psds-button--appearance-primary " id="login">Sign in</button>
                     </form>
                     <div class="links">
                         <a class="psds-link" href="#">Forgot password?</a>
