folder direction change

--- a/accountInform.html
+++ b/accountInform.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <title>buy</title>
-    <link rel="stylesheet" href="../style/accountInform.css">
+    <link rel="stylesheet" href="./style/accountInform.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -312,4 +312,4 @@
 </body>
 </html>
 <!-- <img src="https://i.ibb.co/qRFYsv2/Screenshot-35.png"> -->
-<script src="../script/accountInform.js"></script>
+<script src="./script/accountInform.js"></script>
