--- a/signIn.html
+++ b/signIn.html
@@ -29,7 +29,7 @@
                         </div>
                         <div>
                             <label class="psds-text-input___label" for="Username">Password</label><br>
-                            <input type="password" id="passsword" name="password" class="psds-text-input__field">
+                            <input type="password" id="password" name="password" class="psds-text-input__field">
                         </div>
                         <button type="submit" style="cursor: pointer;" class="psds-button psds-button--appearance-primary " id="login">Sign in</button>
                     </form>
@@ -70,4 +70,4 @@
     </div>
 </body>
 </html>
-<script src="../script/script.js"></script>
+<script src="../script/signIn.js"></script>
