--- a/viewPlans.html
+++ b/viewPlans.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../style/viewPlans.css">
+    <link rel="stylesheet" href="./style/viewPlans.css">
 </head>
 <body style="background:#181818;color:#222;cursor:auto;
 font-style: normal;
@@ -1454,4 +1454,4 @@ font-family: Arial, Helvetica, sans-serif;
     </div>
 </body>
 </html>
-<script src="../script/viewPlans.js"></script>
+<script src="./script/viewPlans.js"></script>
