--- a/pricing.html
+++ b/pricing.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <title>Pricing</title>
-    <link rel="stylesheet" href="../style/pickPlan.css">
+    <link rel="stylesheet" href="./style/pickPlan.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -499,4 +499,4 @@
 <!--
     <a href="https://ibb.co/wCNBVTh"><img src="https://i.ibb.co/RPpYf1T/logo-flow.png" alt="logo-flow" border="0"></a>
     <a href="https://ibb.co/BCmThQp"><img src="https://i.ibb.co/QKZYWTg/logo-skills.png" alt="logo-skills" border="0"></a> -->
-<script src="../script/script.js"></script>
+<script src="./script/script.js"></script>
